--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     },
     "devDependencies": {
         "@sveltejs/vite-plugin-svelte": "^2.4.2",
+        "autoprefixer": "^10.4.14",
         "axios": "^1.1.2",
+        "daisyui": "^3.2.1",
         "laravel-vite-plugin": "^0.7.5",
+        "postcss": "^8.4.26",
         "svelte": "^4.0.5",
+        "tailwindcss": "^3.3.3",
         "vite": "^4.0.0"
     },
     "dependencies": {
