--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
+    "@tailwindcss/forms": "^0.5.9",
     "autoprefixer": "^10.4.14",
     "axios": "^1.6.4",
     "concurrently": "^9.0.1",
