--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "vite"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^4.0.1",
+    "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tailwindcss/forms": "^0.5.9",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.4",
@@ -15,11 +15,11 @@
     "postcss": "^8.4.26",
     "svelte": "^5.2.3",
     "tailwindcss": "^3.3.3",
-    "vite": "^5.0"
+    "vite": "^6.0.5"
   },
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
-    "@inertiajs/svelte": "^2.0.0-beta.2",
+    "@inertiajs/svelte": "^2.0.0",
     "svelte-fa": "^4.0.2"
   }
 }
