--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tailwindcss/forms": "^0.5.9",
-    "autoprefixer": "^10.4.20",
+    "@tailwindcss/postcss": "^4.0.0",
+    "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.7.4",
     "concurrently": "^9.0.1",
     "laravel-vite-plugin": "^1.0",
-    "postcss": "^8.4.26",
+    "postcss": "^8.5.1",
     "svelte": "^5.2.3",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "^4.0.0",
     "vite": "^6.0.5"
   },
   "dependencies": {
