--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_TIMEZONE=UTC
-APP_URL=http://localhost:8000
+APP_URL=http://localhost
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -39,7 +38,7 @@ FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
 CACHE_STORE=database
-CACHE_PREFIX=
+# CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
 
