--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
+    "$schema": "https://getcomposer.org/schema.json",
     "name": "ronsen/laravel-svelte-starter",
     "type": "project",
-    "description": "Starter template using Laravel and Svelte with InertiaJS.",
+    "description": "The skeleton application for the Laravel framework.",
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
