--- a/.editorconfig
+++ b/.editorconfig
@@ -4,16 +4,15 @@ root = true
 charset = utf-8
 end_of_line = lf
 indent_size = 4
-indent_style = tab
+indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
 [*.md]
 trim_trailing_whitespace = false
 
-[*.{yml,yaml,json}]
+[*.{yml,yaml}]
 indent_size = 2
-indent_style = space
 
 [docker-compose.yml]
 indent_size = 4
