--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "dev": "vite"
     },
     "devDependencies": {
-        "@lucide/svelte": "^0.534.0",
+        "@lucide/svelte": "^0.536.0",
         "@sveltejs/vite-plugin-svelte": "^6.0.0",
         "@tailwindcss/forms": "^0.5.9",
         "@tailwindcss/vite": "^4.0.0",
@@ -16,6 +16,7 @@
         "laravel-vite-plugin": "^2.0.0",
         "svelte": "^5.2.3",
         "tailwindcss": "^4.0.0",
+        "typescript": "^5.9.2",
         "vite": "^7.0.0"
     },
     "dependencies": {
